# TaleForge

./: .env.example  .gitignore  README.md  pyproject.toml
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  api.ts  index.css  types.ts
frontend/src/components/: ActionInput.tsx  CombatOverlay.tsx  DiceFooter.tsx  Header.tsx  InventoryPanel.tsx  NpcPanel.tsx  ProseFeed.tsx  WorldMap.tsx
frontend/src/i18n/: index.tsx  strings.ts
src/taleforge/: __init__.py  cli.py  config.py  models.py
src/taleforge/agents/: base.py  graph.py  narrator.py  npc_actor.py  npc_director.py  orchestrator.py  rules_lawyer.py
src/taleforge/bench/: consistency.py
src/taleforge/llm/: minimax.py  prompts.py
src/taleforge/scenarios/: starter_village.yaml
src/taleforge/state/: store.py  tools.py
src/taleforge/web/: schemas.py  server.py
tests/: test_bench.py  test_graph.py  test_minimax_client.py  test_narrator.py  test_npc_director.py  test_orchestrator.py  test_rules_lawyer.py  test_state_mutations.py  test_web_server.py
