[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "taleforge"
version = "0.1.0"
description = "Four LLM agents play D&D so you don't need four friends — a multi-agent text RPG."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "TaleForge contributors" }]
license = { text = "MIT" }
dependencies = [
    "pydantic>=2.7",
    "httpx>=0.27",
    "typer>=0.12",
    "rich>=13",
    "pyyaml>=6",
    "python-dotenv>=1.0",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "langgraph>=0.2.40",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
]

[project.scripts]
taleforge = "taleforge.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/taleforge"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["src"]
